--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta name="viewport" content="width=device-width", initial-scale="1.0">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <title>Portfolio</title>
-        <link rel="stylesheet" href="/css/main.css">
-        <link rel="stylesheet" href="/css/shared.css">
+        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/shared.css">
     </head>
         
     <body>
@@ -115,7 +115,7 @@
         <section id="about-me" class="about-me">
             <div class="container">
                 <div class="about-me__image">
-                    <img src="/images/clients-image.webp" alt="about-me">
+                    <img src="images/clients-image.webp" alt="about-me">
                 </div>
                 <div class="about-me__info">
                     <h5 class="subtitle">
@@ -218,7 +218,7 @@
                 </div>
                 <div class="portfolio-items">
                     <div class="portfolio-item portfolio-item-1">
-                        <img src="/images/p1.webp" alt="Portfolio image" class="portfolio-item__image">
+                        <img src="images/p1.webp" alt="Portfolio image" class="portfolio-item__image">
                         <div class="portfolio-item__overlay"></div>
                         <div class="portfolio-item__info">
                             <h4>
@@ -228,7 +228,7 @@
                         </div>
                     </div>
                     <div class="portfolio-item portfolio-item-2">
-                        <img src="/images/p2.jpg" alt="Portfolio image" class="portfolio-item__image">
+                        <img src="images/p2.jpg" alt="Portfolio image" class="portfolio-item__image">
                         <div class="portfolio-item__overlay"></div>
                         <div class="portfolio-item__info">
                             <h4>
@@ -238,7 +238,7 @@
                         </div>
                     </div>
                     <div class="portfolio-item portfolio-item-3">
-                        <img src="/images/p3.jpg" alt="Portfolio image" class="portfolio-item__image">
+                        <img src="images/p3.jpg" alt="Portfolio image" class="portfolio-item__image">
                         <div class="portfolio-item__overlay"></div>
                         <div class="portfolio-item__info">
                             <h4>
@@ -265,7 +265,7 @@
                 <div class="blog-items">
                     <div class="blog-item">
                         <div class="blog-item__image">
-                            <img src="/images/blog-1.jpg" alt="Blog-1 image">
+                            <img src="images/blog-1.jpg" alt="Blog-1 image">
                         </div>
                         <div class="blog-item__info">
                             <div class="blog-item__main-info">
@@ -285,7 +285,7 @@
                     </div>
                     <div class="blog-item">
                         <div class="blog-item__image">
-                            <img src="/images/blog-2.jpg" alt="Blog-1 image">
+                            <img src="images/blog-2.jpg" alt="Blog-1 image">
                         </div>
                         <div class="blog-item__info">
                             <div class="blog-item__main-info">
@@ -305,7 +305,7 @@
                     </div>
                     <div class="blog-item">
                         <div class="blog-item__image">
-                            <img src="/images/blog-3.jpg" alt="Blog-1 image">
+                            <img src="images/blog-3.jpg" alt="Blog-1 image">
                         </div>
                         <div class="blog-item__info">
                             <div class="blog-item__main-info">
@@ -354,7 +354,7 @@
         <!--Footer section-->
             <footer id="footer" class="footer">
                 <div class="footer-brand">
-                    <img src="/images/banner2.png" alt="Logo">
+                    <img src="images/banner2.png" alt="Logo">
                 </div>
                 <nav class="footer-navigation">
                     <ul class="footer-navigation__items">
